--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "homepage": "https://alecperkins.net/zip-tz",
   "keywords": [
+    "zipcode",
     "zip code",
+    "timezone",
     "time zone"
   ],
   "type": "commonjs",
@@ -52,6 +54,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^5.0.2",
     "typescript-transpile-only": "^0.0.4",
+    "uglify-js": "^3.17.4",
     "vitest": "^1.4.0"
   }
 }
