chore: Tweak README content

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/alecperkins/zip-tz.git"
   },
-  "homepage": "https://alecperkins.net/zip-tz",
+  "homepage": "https://alecperkins.net/tools/zip-tz/",
   "keywords": [
     "zipcode",
     "zip code",
